--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dev = ["ruff==0.0.265",
        "mypy==1.3.0",
        "black==23.3.0",
        "isort==5.12.0"]
-test = ["pytest==7.3.1"]
+test = ["pytest==7.3.1",
+        "httpx"]
 
 
 [tool.ruff]
