--- a/notifications_service/Dockerfile
+++ b/notifications_service/Dockerfile
@@ -1,17 +1,17 @@
 FROM python:3.11.4-slim-bullseye
 
+# Psycopg requirements
 RUN apt-get update
-
 RUN apt-get install -y libpq-dev python-dev python3-dev gcc
 
 WORKDIR /code
 
-COPY ./requirements.txt /code/
+COPY requirements.txt /code/
 
 RUN pip install -r requirements.txt
 
-COPY ./notifications_service /code/src
+COPY notifications_service/src /code/src
 
-COPY ./shared /code/shared
+COPY shared /code/shared
 
 CMD ["uvicorn", "src.web_app:app", "--host", "0.0.0.0", "--port", "80"]
