Add notification service (#5)
* add shared code

* add orm

* update .gitignore

* refactor

* delete name colision

* add unit-tests

* add_bookmarks_for_dev

* restructure project

* Update pyproject.toml

* Delete setup.py

* Delete requirements.txt

* fix integration tests

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,33 @@
 version: '3'
 
 services:
+  notifications_service:
+    build:
+      dockerfile: notifications_service/Dockerfile
+      context: ./
+
+    ports:
+      - 8080:80
+
+    env_file:
+      - .env
+
+    depends_on:
+      - database
+
   message_store:
-    build: ./message_store
+    build: 
+      dockerfile: message_store/Dockerfile
+      context: ./
 
     ports:
       - 80:80
 
     env_file:
       - .env      
+
+    depends_on:
+      - database      
       
   database:
     # Official Postgres image from DockerHub (last version)
