--- a/notifications_service/Dockerfile
+++ b/notifications_service/Dockerfile
@@ -1,17 +1,16 @@
 FROM python:3.11.4-slim-bullseye
 
-
 # Psycopg requirements
 RUN apt-get update
 RUN apt-get install -y libpq-dev python-dev python3-dev gcc
 
 WORKDIR /code
 
-COPY message_store/requirements.txt /code/requirements.txt
+COPY notifications_service/requirements.txt /code/
 
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip install -r requirements.txt
 
-COPY message_store/src /code/src
+COPY notifications_service/src /code/src
 
 COPY shared /code/shared
 
