--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,12 @@ services:
     depends_on:
       - database
 
+    # dirty hack to sync timezones for easier testing
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+
+      
   message_store:
     build: 
       dockerfile: message_store/Dockerfile
@@ -28,6 +34,12 @@ services:
 
     depends_on:
       - database      
+
+    # dirty hack to sync timezones for easier testing
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+      
       
   database:
     # Official Postgres image from DockerHub (last version)
@@ -54,3 +66,6 @@ services:
       # Initialize messages & users
       - ./db/migrations/initialize_db.sql:/docker-entrypoint-initdb.d/1-init.sql
       - ./db/migrations/create_notification_channel.sql:/docker-entrypoint-initdb.d/2-create_notification_channel.sql
+      # dirty hack to sync timezones for easier testing
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
