Implement notification service (#6)
* create notification hannel in db

* save channel to db, get channel from db

* use schema in db_models

* add channel data abs

* add  tests

* Update README.md

* move files

* improve ChannelData interface

* add listing channels

* teardown tests data

* add getting notification channel

* add channel details endpoint

* add get channel lifetime

* fix time issues

* fix bugs

* add callback URL and resource URL

* fix integration tests

* fix tests

* refactor

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,12 @@ services:
     depends_on:
       - database
 
+    # dirty hack to sync timezones for easier testing
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+
+      
   message_store:
     build: 
       dockerfile: message_store/Dockerfile
@@ -28,6 +34,12 @@ services:
 
     depends_on:
       - database      
+
+    # dirty hack to sync timezones for easier testing
+    volumes:
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+      
       
   database:
     # Official Postgres image from DockerHub (last version)
@@ -52,4 +64,8 @@ services:
       # You don't need to create the `.data` folder. Docker Compose will do it for you
       - ./db/.data/:/var/lib/postgresql/data/
       # Initialize messages & users
-      - ./db/migrations/initialize_db.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/migrations/initialize_db.sql:/docker-entrypoint-initdb.d/1-init.sql
+      - ./db/migrations/create_notification_channel.sql:/docker-entrypoint-initdb.d/2-create_notification_channel.sql
+      # dirty hack to sync timezones for easier testing
+      - "/etc/timezone:/etc/timezone:ro"
+      - "/etc/localtime:/etc/localtime:ro"
