--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,6 +66,7 @@ services:
       # Initialize messages & users
       - ./db/migrations/initialize_db.sql:/docker-entrypoint-initdb.d/1-init.sql
       - ./db/migrations/create_notification_channel.sql:/docker-entrypoint-initdb.d/2-create_notification_channel.sql
+      - ./db/migrations/create_subscription.sql:/docker-entrypoint-initdb.d/3-create_subscription.sql
       # dirty hack to sync timezones for easier testing
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
